--- a/arch/arm/boot/dts/omap4-l4.dtsi
+++ b/arch/arm/boot/dts/omap4-l4.dtsi
@@ -1286,6 +1286,7 @@
 };
 
 &l4_per {						/* 0x48000000 */
+	status="disabled";
 	compatible = "ti,omap4-l4-per", "simple-pm-bus";
 	power-domains = <&prm_l4per>;
 	clocks = <&l4_per_clkctrl OMAP4_L4_PER_CLKCTRL 0>;
@@ -1391,6 +1392,7 @@
 			 <0x000a5000 0x000a5000 0x001000>;	/* ap 84 */
 
 		target-module@20000 {			/* 0x48020000, ap 3 06.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x20050 0x4>,
 			      <0x20054 0x4>,
@@ -1420,6 +1422,7 @@
 		};
 
 		target-module@32000 {			/* 0x48032000, ap 5 02.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2-timer", "ti,sysc";
 			reg = <0x32000 0x4>,
 			      <0x32010 0x4>,
@@ -1452,6 +1455,7 @@
 		};
 
 		target-module@34000 {			/* 0x48034000, ap 7 04.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4-timer", "ti,sysc";
 			reg = <0x34000 0x4>,
 			      <0x34010 0x4>;
@@ -1480,6 +1484,7 @@
 		};
 
 		target-module@36000 {			/* 0x48036000, ap 9 0e.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4-timer", "ti,sysc";
 			reg = <0x36000 0x4>,
 			      <0x36010 0x4>;
@@ -1508,6 +1513,7 @@
 		};
 
 		target-module@3e000 {			/* 0x4803e000, ap 11 08.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4-timer", "ti,sysc";
 			reg = <0x3e000 0x4>,
 			      <0x3e010 0x4>;
@@ -1546,6 +1552,7 @@
 		};
 
 		target-module@55000 {			/* 0x48055000, ap 15 0c.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x55000 0x4>,
 			      <0x55010 0x4>,
@@ -1579,6 +1586,7 @@
 		};
 
 		target-module@57000 {			/* 0x48057000, ap 17 16.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x57000 0x4>,
 			      <0x57010 0x4>,
@@ -1612,6 +1620,7 @@
 		};
 
 		target-module@59000 {			/* 0x48059000, ap 19 10.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x59000 0x4>,
 			      <0x59010 0x4>,
@@ -1645,6 +1654,7 @@
 		};
 
 		target-module@5b000 {			/* 0x4805b000, ap 21 12.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x5b000 0x4>,
 			      <0x5b010 0x4>,
@@ -1678,6 +1688,7 @@
 		};
 
 		target-module@5d000 {			/* 0x4805d000, ap 23 14.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x5d000 0x4>,
 			      <0x5d010 0x4>,
@@ -1711,6 +1722,7 @@
 		};
 
 		target-module@60000 {			/* 0x48060000, ap 25 1e.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x60000 0x8>,
 			      <0x60010 0x8>,
@@ -1742,6 +1754,7 @@
 		};
 
 		target-module@6a000 {			/* 0x4806a000, ap 26 18.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x6a050 0x4>,
 			      <0x6a054 0x4>,
@@ -1771,6 +1784,7 @@
 		};
 
 		target-module@6c000 {			/* 0x4806c000, ap 28 20.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x6c050 0x4>,
 			      <0x6c054 0x4>,
@@ -1800,6 +1814,7 @@
 		};
 
 		target-module@6e000 {			/* 0x4806e000, ap 30 1c.1 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x6e050 0x4>,
 			      <0x6e054 0x4>,
@@ -1829,6 +1844,7 @@
 		};
 
 		target-module@70000 {			/* 0x48070000, ap 32 28.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x70000 0x8>,
 			      <0x70010 0x8>,
@@ -1860,6 +1876,7 @@
 		};
 
 		target-module@72000 {			/* 0x48072000, ap 34 30.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x72000 0x8>,
 			      <0x72010 0x8>,
@@ -1891,6 +1908,7 @@
 		};
 
 		target-module@76000 {			/* 0x48076000, ap 39 38.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0x76000 0x4>,
 			      <0x76010 0x4>;
@@ -1911,6 +1929,7 @@
 		};
 
 		target-module@78000 {			/* 0x48078000, ap 41 1a.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x78000 0x4>,
 			      <0x78010 0x4>,
@@ -1939,6 +1958,7 @@
 		};
 
 		target-module@86000 {			/* 0x48086000, ap 43 24.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2-timer", "ti,sysc";
 			reg = <0x86000 0x4>,
 			      <0x86010 0x4>,
@@ -1972,6 +1992,7 @@
 		};
 
 		target-module@88000 {			/* 0x48088000, ap 45 2e.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4-timer", "ti,sysc";
 			reg = <0x88000 0x4>,
 			      <0x88010 0x4>;
@@ -2001,6 +2022,7 @@
 		};
 
 		rng_target: target-module@90000 {	/* 0x48090000, ap 57 2a.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x91fe0 0x4>,
 			      <0x91fe4 0x4>;
@@ -2023,6 +2045,7 @@
 		};
 
 		target-module@96000 {			/* 0x48096000, ap 37 26.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x9608c 0x4>;
 			reg-names = "sysc";
@@ -2054,6 +2077,7 @@
 		};
 
 		target-module@98000 {			/* 0x48098000, ap 49 22.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0x98000 0x4>,
 			      <0x98010 0x4>;
@@ -2092,6 +2116,7 @@
 		};
 
 		target-module@9a000 {			/* 0x4809a000, ap 51 2c.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0x9a000 0x4>,
 			      <0x9a010 0x4>;
@@ -2125,6 +2150,7 @@
 		};
 
 		target-module@9c000 {			/* 0x4809c000, ap 53 36.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0x9c000 0x4>,
 			      <0x9c010 0x4>;
@@ -2184,6 +2210,7 @@
 		};
 
 		des_target: target-module@a5000 {	/* 0x480a5000 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0xa5030 0x4>,
 			      <0xa5034 0x4>,
@@ -2221,6 +2248,7 @@
 		};
 
 		target-module@ad000 {			/* 0x480ad000, ap 63 50.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0xad000 0x4>,
 			      <0xad010 0x4>;
@@ -2261,6 +2289,7 @@
 		};
 
 		target-module@b2000 {			/* 0x480b2000, ap 65 3c.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0xb2000 0x4>,
 			      <0xb2014 0x4>,
@@ -2285,6 +2314,7 @@
 		};
 
 		target-module@b4000 {			/* 0x480b4000, ap 67 46.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0xb4000 0x4>,
 			      <0xb4010 0x4>;
@@ -2317,6 +2347,7 @@
 		};
 
 		target-module@b8000 {			/* 0x480b8000, ap 69 58.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0xb8000 0x4>,
 			      <0xb8010 0x4>;
@@ -2347,6 +2378,7 @@
 		};
 
 		target-module@ba000 {			/* 0x480ba000, ap 71 32.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0xba000 0x4>,
 			      <0xba010 0x4>;
@@ -2377,6 +2409,7 @@
 		};
 
 		target-module@d1000 {			/* 0x480d1000, ap 73 44.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0xd1000 0x4>,
 			      <0xd1010 0x4>;
@@ -2409,6 +2442,7 @@
 		};
 
 		target-module@d5000 {			/* 0x480d5000, ap 75 4e.0 */
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0xd5000 0x4>,
 			      <0xd5010 0x4>;
