--- a/arch/arm/boot/dts/omap4.dtsi
+++ b/arch/arm/boot/dts/omap4.dtsi
@@ -482,6 +482,7 @@
 		};
 
 		sgx_module: target-module@56000000 {
+			status="disabled";
 			compatible = "ti,sysc-omap4", "ti,sysc";
 			reg = <0x5600fe00 0x4>,
 			      <0x5600fe10 0x4>;
@@ -512,6 +513,7 @@
 		 * "10.1.3 DSS Register Manual" for omap4460.
 		 */
 		target-module@58000000 {
+			status="disabled";
 			compatible = "ti,sysc-omap2", "ti,sysc";
 			reg = <0x58000000 4>,
 			      <0x58000014 4>;
