--- a/arch/arm/boot/dts/omap4-samsung-t1.dts
+++ b/arch/arm/boot/dts/omap4-samsung-t1.dts
@@ -35,40 +35,6 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 		ranges;
-
-		framebuffer@bef00000 {
-			compatible = "simple-framebuffer";
-			reg = <0xbef00000 (480 * 800 * 4)>;
-			width = <480>;
-			height = <800>;
-			stride = <(480 * 4)>;
-			format = "a8r8g8b8";
-
-			//vdd3-supply = <&vaux3>;
-			//vci-supply = <&vusim>;
-		};
-	};
-
-	reg_espresso_internal: regulator-espresso-internal {
-		compatible = "regulator-fixed";
-		regulator-name = "eMMC_LDO";
-		regulator-max-microvolt = <1800000>;
-		regulator-min-microvolt = <1800000>;
-		gpios = <&gpio2 21 GPIO_ACTIVE_HIGH>;
-		startup-delay-us = <100000>;
-		regulator-boot-on;
-		regulator-always-on;
-		enable-active-high;
-	};
-
-	reg_espresso_external: regulator-espresso-external {
-		compatible = "regulator-fixed";
-		regulator-name = "vmmc2";
-		regulator-max-microvolt = <2800000>;
-		regulator-min-microvolt = <2800000>;
-		gpios = <&gpio2 2 GPIO_ACTIVE_HIGH>;
-		regulator-always-on;
-		enable-active-high;
 	};
 };
 
@@ -176,7 +142,7 @@
 
 &mmc1 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&reg_espresso_external>;
+	pinctrl-0 = <&mmc1_pins>;
 
 	vmmc-supply = <&vmmc>;
 	bus-width = <4>;
@@ -186,7 +152,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&mmc2_pins>;
 
-	vmmc-supply = <&reg_espresso_internal>;
+	vmmc-supply = <&vaux1>;
 	ti,non-removable;
 	bus-width = <8>;
 };
