--- a/arch/arm/configs/i9100g_defconfig
+++ b/arch/arm/configs/i9100g_defconfig
@@ -185,7 +185,7 @@ CONFIG_CHECKPOINT_RESTORE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="usr/initramfs.list"
+CONFIG_INITRAMFS_SOURCE="source/usr/initramfs.list"
 # CONFIG_INITRAMFS_FORCE is not set
 CONFIG_INITRAMFS_ROOT_UID=0
 CONFIG_INITRAMFS_ROOT_GID=0
@@ -537,7 +537,7 @@ CONFIG_ARM_APPENDED_DTB=y
 CONFIG_ARM_ATAG_DTB_COMPAT=y
 # CONFIG_ARM_ATAG_DTB_COMPAT_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_ARM_ATAG_DTB_COMPAT_CMDLINE_EXTEND=y
-CONFIG_CMDLINE="console=tty0 PMOS_NO_OUTPUT_REDIRECT ignore_loglevel clk_ignore_unused"
+CONFIG_CMDLINE="console=tty0 PMOS_NO_OUTPUT_REDIRECT ignore_loglevel clk_ignore_unused pd_ignore_unused"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 # CONFIG_CMDLINE_EXTEND is not set
 CONFIG_CMDLINE_FORCE=y
