--- a/arch/arm/boot/dts/omap4-samsung-t1.dts
+++ b/arch/arm/boot/dts/omap4-samsung-t1.dts
@@ -50,9 +50,9 @@
 		pinctrl-0 = <&spi_gpio_pins>;
 
 		num-chipselects = <1>;
-		cs-gpios = <&gpy4 3 GPIO_ACTIVE_LOW>;
-		sck-gpios = <&gpy3 1 GPIO_ACTIVE_HIGH>;
-		mosi-gpios = <&gpy3 3 GPIO_ACTIVE_HIGH>;
+		cs-gpios = <&gpio5 26 GPIO_ACTIVE_LOW>;
+		sck-gpios = <&gpio5 23 GPIO_ACTIVE_HIGH>;
+		mosi-gpios = <&gpio5 24 GPIO_ACTIVE_HIGH>;
 
 		lcd@0 {
 			compatible = "samsung,ld9040";
@@ -63,7 +63,7 @@
 			vdd3-supply = <&vaux3>;
 			vci-supply = <&vusim>;
 
-			reset-gpios = <&gpy4 5 GPIO_ACTIVE_HIGH>;
+			reset-gpios = <&gpio2 3 GPIO_ACTIVE_HIGH>;
 			power-on-delay = <10>;
 			reset-delay = <10>;
 
@@ -89,8 +89,8 @@
 			};
 
 			port {
-				lcd_ep: endpoint {
-					remote-endpoint = <&fimd_dpi_ep>;
+				lcd_in: endpoint {
+					remote-endpoint = <&dpi_out>;
 				};
 			};
 		};
@@ -296,6 +296,13 @@
 
 	pinctrl-names = "default";
 	pinctrl-0 = <&dss_dpi_pins>;
+
+	port {
+		dpi_out: endpoint {
+			remote-endpoint = <&lcd_in>;
+			data-lines = <24>;
+		};
+	};
 };
 
 #include "twl6030.dtsi"
