Seems to work according to dmesg

--- a/arch/arm/boot/dts/omap4-samsung-t1.dts
+++ b/arch/arm/boot/dts/omap4-samsung-t1.dts
@@ -53,6 +53,7 @@
 		cs-gpios = <&gpio5 26 GPIO_ACTIVE_LOW>;
 		sck-gpios = <&gpio5 23 GPIO_ACTIVE_HIGH>;
 		mosi-gpios = <&gpio5 24 GPIO_ACTIVE_HIGH>;
+		miso-gpios = <&gpio5 25 GPIO_ACTIVE_HIGH>;
 
 		lcd@0 {
 			compatible = "samsung,ld9040";
